ci/resources/data.statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: data
  namespace: data
  annotations:
    fluxcd.io/ignore: "true"
spec:
  serviceName: data
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      cluster: data.data
  template:
    metadata:
      labels:
        cluster: data.data
    spec:
      serviceAccountName: data
      containers:
      - name: data
        image: "docker.production.deciphernow.com/deciphernow/gm-data:1.0.2"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
          - name: data-pvc
            mountPath: /app/buckets/decipher-quickstart-helm/data
      - name: sidecar
        image: "docker.production.deciphernow.com/deciphernow/gm-proxy:1.2.2"
        imagePullPolicy: IfNotPresent
        args:
          - -c
          - /etc/greymatter/config.yaml
        command:
          - /app/gm-proxy
        ports:
        - name: metrics
          containerPort: 8080
          protocol: TCP
        - name: sidecar
          containerPort: 8443
          protocol: TCP
        volumeMounts:
        - name: spire-socket
          mountPath: /run/spire/sockets
          readOnly: false
        - name: sidecar-config
          mountPath: /etc/greymatter
          readOnly: true
      imagePullSecrets:
        - name: docker.production.deciphernow.com
        - name: index.docker.io
      volumes:
      - name: spire-socket
        hostPath:
          path: /run/spire/sockets
          type: DirectoryOrCreate
      - name: sidecar-config
        configMap:
          name: data-sidecar
      - name: data
        secret:
          secretName: data-secrets
      - name: jwt-security
        secret:
          secretName: jwt-security
  volumeClaimTemplates:
  - metadata:
      name: data-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 40Gi
