ci/resources/edge.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: edge
  namespace: edge
  labels:
    app: edge
    cluster: edge.edge
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: sidecar
  selector:
    app: edge
    cluster: edge.edge
  type: LoadBalancer
